--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=Asia/Shang
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=password
+#\u6700\u5927\u6D3B\u8DC3\u8FDE\u63A5\u6570
+spring.redis.lettuce.pool.max-active=8
+#\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5\u6570
+spring.redis.lettuce.pool.max-idle=8
+#\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5\u6570
+spring.redis.lettuce.pool.min-idle=0
